# mpgc

./: .gitignore  FEATURES_CHECKLIST  README
library_examples/daemon/: linux-daemon-howto.html  simpledaemon.c
library_examples/popt/: README
microhttpd_examples/: Makefile  README  hellobrowser.c
popt_examples/: Makefile  basicpopt.c
server/: Makefile  server.c
src/server/: .gitignore  Makefile  daemon.c  daemon.h  main.c  mpgcd.c  options.c  options.h  server.c  server.h
src/server_scripts/: README  volume
tutorials/cmake/: README  cmake_tutorial.html
tutorials/cmake/step_01/version_02/: CMakeLists.txt
tutorials/cmake/step_02/version_03/: CMakeLists.txt
tutorials/cmake/step_02/version_05/: CMakeLists.txt
tutorials/cmake/step_02/version_05/MathFunctions/: mysqrt.cxx
tutorials/cmake/step_03/version_06/: CMakeLists.txt
tutorials/cmake/step_03/version_06/MathFunctions/: MathFunctions.h
tutorials/cmake/step_03/version_07/: CMakeLists.txt  TutorialConfig.h.in
tutorials/cmake/version_01/: tutorial.cxx
tutorials/cmake/version_03/: CMakeLists.txt  tutorial.cxx
tutorials/cmake/version_03/MathFunctions/: mysqrt.cxx
tutorials/cmake/version_04/: CMakeLists.txt  tutorial.cxx
tutorials/cmake/version_06/: CMakeLists.txt
tutorials/cmake/version_07/: CMakeLists.txt  tutorial.cxx
tutorials/cmake/version_08/: CMakeLists.txt
tutorials/cmake/version_08/MathFunctions/: mysqrt.h
tutorials/daemon/: Makefile  README
